fixed nav on mobile

--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -26,6 +26,36 @@ h6 {
     font-weight: 400;
 }
 
+/*
+.navbar-custom {
+  position: relative;
+  float: right;
+  padding: 9px 10px;
+  margin-top: 8px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+*/
+
+.navbar-custom.top-nav-collapse .icon-bar
+{
+    display:block;
+    width:22px;
+    height:2px;
+    border-radius:1px;
+    border:1px solid #4772B2;
+}
+
+.navbar-custom .dropdown-menu .divider
+{
+    height: 1px;
+    border: 1px solid #D5D5D5;
+}
+
 .navbar-custom ul.nav ul.dropdown-menu li a:hover {
     outline: 0;
     background-color: rgba(0,0,0,.2);
@@ -51,8 +81,9 @@ h6 {
 }
 
 .navbar-custom ul.nav ul.dropdown-menu {
-    border-radius: 0;	
+    border-radius: 4px;
 	/*background: transparent;*/
+    background-color: #f8f8f8;
 }
 
 .navbar-custom ul.nav ul.dropdown-menu li {
